--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "debounce": "^1.2.0",
     "query-string": "^5.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
