--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest --init",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^5.3.0"
+    "babel-jest": "^23.4.2",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "eslint": "^5.3.0",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
