--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.3.0",
-    "identity-obj-proxy": "^3.0.0"
+    "identity-obj-proxy": "^3.0.0",
+    "sinon": "^6.1.5"
   }
 }
