--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "linter": "eslint src/components/**",
+    "linter": "eslint src/components/**/*.jsx",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
@@ -45,6 +45,7 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
